--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 code/app/assets/
 code/app/protected/views/user/_form.php
+/code/nbproject/private/private.properties
+/code/nbproject/project.properties
+/code/nbproject/project.xml
