--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ code/app/protected/views/user/_form.php
 code/app/protected/runtime/application.log
 
 web/nbproject/private/private.xml
+
+docs/Designer/anime_trigger.7z
+
+docs/.DS_Store
+
+docs/Designer/.DS_Store
