--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ docs/Designer/anime_trigger.7z
 docs/.DS_Store
 
 docs/Designer/.DS_Store
+
+web/app/webroot/img/files/snow_bunitando_mais_velho.jpg
+
+web/app/webroot/img/files/snow_cocando.jpg
