--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@ docs/Designer/.DS_Store
 web/app/webroot/img/files/snow_bunitando_mais_velho.jpg
 
 web/app/webroot/img/files/snow_cocando.jpg
+
+web/app/webroot/img/files/bakuman.jpg
+
+web/app/webroot/img/files/dragon_ball.jpeg
+
+web/app/webroot/img/files/dragon_ball_gt.jpg
+
+web/app/webroot/img/files/dragon_ball_z.jpg
+
+web/app/webroot/img/files/dragon_ball_z1.jpg
