--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ web/app/webroot/img/files/dragon_ball_z.jpg
 
 web/app/webroot/img/files/dragon_ball_z1.jpg
 /wp/nbproject/private/
+wp/nbproject/project.xml
